--- a/week03/code/index.html
+++ b/week03/code/index.html
@@ -11,32 +11,10 @@
 	<body>
     <!-- next class you will have tiem to work on a selfportrait. -->
   <main>
-    <div id="mySelfie">
-    <button><div></div></button><button><div></div></button>
-     <section class="myNose">|</section> 
-     <section class="myNose">|</section> 
-     <section class="myNose">|</section> 
-     <section class="myNose">|</section> 
-     <section class="myNose">|</section> 
-     <section class="myNose">|</section> 
-     <section class="myNose">______</section> 
-     <br>
-     <br>
-     <br>
-     <section id="myMouth">--</section>
-  <br>
-  <br>
-  <br>
-  <br>
-  </div>
-  <br>
- 
-  </div>
-  I am a muppet.
-  <br>
-  <hr>
+   
   <h3> Intro to CSS</h3>
   <h4> where things get real</h4>
+ <a href="selfies/mySelf.html"><button>click to see self</button></a> 
     <div id="theAuthor">
       -- Gertrude stein <span><a href="https://brbl-dl.library.yale.edu/vufind/Record/3739670">theWorldIsRound</a></span>
     </div>
