--- a/week03/code/index.html
+++ b/week03/code/index.html
@@ -3,31 +3,35 @@
 
 	<head>
 		<title> 🖥 Intro to Web Dev Week 03</title>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Nunito&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="theStyle.css">
+		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Nunito&display=swap" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="theStyle.css">
 
-  </head>
+	</head>
 
 	<body>
-    <!-- next class you will have tiem to work on a selfportrait. -->
-  <main>
-   
-  <h3> Intro to CSS</h3>
-  <h4> where things get real</h4>
- <a href="selfies/mySelf.html"><button>click to see self</button></a> 
-    <div id="theAuthor">
-      -- Gertrude stein <span><a href="https://brbl-dl.library.yale.edu/vufind/Record/3739670">theWorldIsRound</a></span>
-    </div>
-    <p>this is some content</p>
-    <p class="theseP">this is some content</p>
-    <p>this is some content</p>
-    <p class="theseP">this is some content</p>
-    <p>this is some content</p>
-    <p class="theseP">this is some content</p>
-    <p>this is some content</p>
+		<!-- next class you will have tiem to work on a selfportrait. -->
+		<main>
 
-  </main>
-   
+			<h3> Intro to CSS</h3>
+			<h4> where things get real</h4>
+			<div id="thebuttons">
+				<a href="selfies/mySelf.html"><button>click to see self</button></a>
+				<a href="00_position"><button>click to see position code</button></a>
+				<a href="01_float"><button>click to see float code</button></a>
+			</div>
+			<div id="theAuthor">
+				-- Gertrude stein <span><a href="https://brbl-dl.library.yale.edu/vufind/Record/3739670">theWorldIsRound</a></span>
+			</div>
+			<p>this is some content</p>
+			<p class="theseP">this is some content</p>
+			<p>this is some content</p>
+			<p class="theseP">this is some content</p>
+			<p>this is some content</p>
+			<p class="theseP">this is some content</p>
+			<p>this is some content</p>
+
+		</main>
+
 
 	</body>
 
