--- a/week05/code/index.html
+++ b/week05/code/index.html
@@ -3,13 +3,22 @@
 
 	<head>
 		<title> 🖥 Intro to Web Dev Week 05</title>
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0”> -->
+		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 		<link rel="stylesheet" type="text/css" href="theStyle.css">
 
 	</head>
 
  <body>
-		
-				<img src="globe.png">
-			
- </body>
+		<p>this is the earth it is rad. </p>
+				<img src="globe.png">adfalsdj
+				<!-- this is the earth it is rad -->
+		<footer id="theFlex">
+			<a href="" class="thisItem">Instagram</a>
+			<a href="" class="thisItem">Instagram</a>
+			<a href="" class="thisItem">Instagram</a>
+			<a href="" class="thisItem">Instagram</a>
+		</footer>
+	
+			</body>
  </html>
