--- a/week05/code/index.html
+++ b/week05/code/index.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<title> 🖥 Intro to Web Dev Week 05</title>
+		<link href="https://fonts.googleapis.com/css?family=Spartan|Trade+Winds&display=swap" rel="stylesheet">
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0”> -->
 		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 		<link rel="stylesheet" type="text/css" href="theStyle.css">
@@ -11,7 +12,8 @@
 
  <body>
 		<p>this is the earth it is rad. </p>
-				<img src="globe.png">adfalsdj
+				<img src="globe.png">
+				The economic system founded on isolation is a circular production of isolation. The technology is based on isolation, and the technical process isolates in turn. From the automobile to television, all the goods selected by the spectacular system are also its weapons for a constant reinforcement of the conditions of isolation of “lonely crowds.” The spectacle constantly rediscovers its own assumptions more concretely.
 				<!-- this is the earth it is rad -->
 		<footer id="theFlex">
 			<a href="" class="thisItem">Instagram</a>
@@ -19,6 +21,9 @@
 			<a href="" class="thisItem">Instagram</a>
 			<a href="" class="thisItem">Instagram</a>
 		</footer>
-	
-			</body>
+	<iframe src="//player.bilibili.com/player.html?aid=43734148&cid=76625334&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<p>
+	The alienation of the spectator to the profit of the contemplated object (which is the result of his own unconscious activity) is expressed in the following way: the more he contemplates the less he lives; the more he accepts recognizing himself in the dominant images of need, the less he understands his own existence and his own desires. The externality of the spectacle in relation to the active man appears in the fact that his own gestures are no longer his but those of another who represents them to him. This is why the spectator feels at home nowhere, because the spectacle is everywhere.
+</p>		
+</body>
  </html>
