--- a/week06/code/index.html
+++ b/week06/code/index.html
@@ -8,14 +8,14 @@
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0”> -->
 		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
   <meta charset="utf-8">
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-  <!-- <link rel="stylesheet" type="text/css" href="theStyle.css"> -->
-  <script src="sketch.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script> -->
+  <link rel="stylesheet" type="text/css" href="theStyle.css">
+  <!-- <script src="sketch.js"></script> -->
 
 	</head>
 
  <body>
   <div>  🖥 I 🖥 🖥 I 🖥 I 🖥 I 🖥 I 🖥 I 🖥 I 🖥 I 🖥 I 🖥 I 🖥 I</div>
-
+  <img src="globe.png">
 </body>
  </html>
