--- a/week11/code/index.html
+++ b/week11/code/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="../../week06/code/globe.png"/>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="theMedium.js" defer></script>
   
@@ -17,7 +18,7 @@
   <h3>hello jQuery!!</h3>
 
 
-		<button id="mySecondButton">CLICK</button>
+		<button id="myButton">CLICK</button>
 
 		<div id="target">
 			Click here
