--- a/week07/code/01-ES/index.html
+++ b/week07/code/01-ES/index.html
@@ -2,22 +2,27 @@
 <html>
 
 	<head>
-    <title> 🖥 Intro to Web Dev Week 07</title>
-    <link rel="shortcut icon" type="image/png" href="../../week06/code/globe.png"/>
-  	<link href="https://fonts.googleapis.com/css?family=Spartan|Trade+Winds&display=swap" rel="stylesheet">
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-    <meta charset="utf-8">
-    <script src="springTime.js" defer></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-   
+		<title> 🖥 Intro to Web Dev Week 07</title>
+		<link rel="shortcut icon" type="image/png" href="../../week06/code/globe.png" />
+		<link href="https://fonts.googleapis.com/css?family=Spartan|Trade+Winds&display=swap" rel="stylesheet">
+		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+		<meta charset="utf-8">
+		<script>
+			console.log("this is in the html!")
+
+		</script>
+		<script src="springTime.js" defer></script>
+		<link rel="stylesheet" type="text/css" href="style.css">
+
 
 	</head>
 
- <body>
-  <button id="firstButton">1</button>
-  <h2>hello worlds!</h2>
-  <button>2</button>
-  <button>3</button>
-  <button>4</button> 
-  <button>5</button> </body>
+	<body>
+		<button id="firstButton">one</button>
+		<h2>hello worlds!</h2>
+		<button>2</button>
+		<button>3</button>
+		<button>4</button>
+		<button>5</button> </body>
+
 </html>
