--- a/week11/code/index.html
+++ b/week11/code/index.html
@@ -2,20 +2,20 @@
 <html>
 
 	<head>
-    <title> 🖥 Intro to Web Dev Week 10</title>
-    <link rel="shortcut icon" type="image/png" href="../../week06/code/globe.png"/>
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-    <meta charset="utf-8">
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="theMedium.js" defer></script>
-  
-   
+		<title> 🖥 Intro to Web Dev Week 10</title>
+		<link rel="shortcut icon" type="image/jpg" href="http://oldobjectsnewideas.com/reb.jpg" />
+		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+		<meta charset="utf-8">
+		<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<script src="theMedium.js" defer></script>
+
+
 
 	</head>
 
- <body>
-  <h3>hello jQuery!!</h3>
+	<body>
+		<h3>hello jQuery!!</h3>
 
 
 		<button id="myButton">CLICK</button>
@@ -26,5 +26,6 @@
 		<div id="other">
 			Trigger the handler
 		</div>
-  </body>
-  </html>
+	</body>
+
+</html>
