--- a/week13/code/index.html
+++ b/week13/code/index.html
@@ -2,7 +2,7 @@
 	<!DOCTYPE html>
 
 	<head>
-		<title> 🖥 Web Production Week 12</title>
+		<title> 🖥 Web Production Week 13</title>
 		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 
 		<meta charset="utf-8">
@@ -12,10 +12,10 @@
 	</head>
 
 	<body>
-		<h3>hello jQuery!!</h3>
+		<h3>hello user media!</h3>
 
 
-		<button id="mySecondButton">Where am I??</button>
+		<button id="myButton">Where am I??</button>
 		<br>
 		<main id="youAreHere">
 		</main>
